fixes bug 189689 "intermittent duplicated content on pages, CRC errors in downloads" r=dougt sr=bzbarsky a=dbaron